# compute-subnet

./: .gitignore  .pdm-python  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: executor_cd_dev.yml  executor_cd_prod.yml  miner_cd_dev.yml  miner_cd_prod.yml  validator_cd_dev.yml  validator_cd_prod.yml
binary-project/: Makefile  main.cpp
contrib/: CONTRIBUTING.md  STYLE.md
datura/: README.md  pyproject.toml
datura/datura/consumers/: base.py
datura/datura/errors/: protocol.py
datura/datura/requests/: base.py  miner_requests.py  validator_requests.py
docs/pod_renaming/: README.md
github/workflows/: validator_cd_prod.yml
neurons/executor/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.runner  Dockerfile.runner.dev  README.md  alembic.ini  check_gpu_utility.py  config.toml  daemon.json  docker-compose.app.dev.yml  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.yml  docker_build.sh  docker_runner_build.sh  docker_runner_build_dev.sh  docker_runner_publish.sh  entrypoint.sh  gpus_utility.py  nvidia_docker_sysbox_setup.sh  pyproject.toml  run.sh
neurons/executor/migrations/: env.py
neurons/executor/migrations/versions/: 04554e2db080_podlog.py  8b04ab8f89f9_podlog.py
neurons/executor/src/: decrypt_challenge.py  executor.py  gpus_utility.py  monitor.py
neurons/executor/src/clients/: executor_client.py
neurons/executor/src/core/: config.py  db.py  logger.py
neurons/executor/src/daos/: base.py  pod_log.py
neurons/executor/src/middlewares/: miner.py
neurons/executor/src/models/: __init__.py  pod_log.py
neurons/executor/src/payloads/: miner.py
neurons/executor/src/routes/: apis.py
neurons/executor/src/services/: miner_service.py  pod_log_service.py  ssh_service.py
neurons/miners/: .dockerignore  .env.template  Dockerfile  Dockerfile.runner  Dockerfile.runner.dev  README.md  alembic.ini  assigning_validator_hotkeys.md  docker-compose.app.dev.yml  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker_build.sh  docker_publish.sh  docker_runner_build.sh  docker_runner_build_dev.sh  docker_runner_publish_dev.sh  entrypoint.sh  gpt2-training-model.py  miner.py  pyproject.toml  run.sh
neurons/miners/consumers/: validator_consumer.py
neurons/miners/core/: config.py
neurons/miners/migrations/: env.py
neurons/miners/migrations/versions/: 8e52603bd563_create_validator_model.py  eb0b92cbc38e_add_executors_table.py
neurons/miners/src/: _miner.py  cli.py  connector.py  gpt2-training-model.py  miner.py
neurons/miners/src/clients/: miner_portal_client.py
neurons/miners/src/consumers/: validator_consumer.py
neurons/miners/src/core/: config.py  const.py  db.py  miner.py  utils.py
neurons/miners/src/daos/: base.py  executor.py  validator.py
neurons/miners/src/dtos/: validator.py
neurons/miners/src/models/: executor.py  validator.py
neurons/miners/src/protocol/: miner_portal_request.py  miner_request.py
neurons/miners/src/routes/: debug_routes.py  validator_interface.py
neurons/miners/src/services/: cli_service.py  executor_service.py  ioc.py  ssh_service.py  validator_service.py
neurons/validators/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.runner  Dockerfile.runner.dev  README.md  alembic.ini  docker-compose.app.dev.yml  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker_build.sh  docker_publish.sh  docker_runner_build.sh  docker_runner_build_dev.sh  entrypoint.sh  pyproject.toml  run.sh  validator.py
neurons/validators/migrations/: env.py
neurons/validators/migrations/versions/: 0653dc97382a_add_executors_table.py  cb1e52830bd2_create_task_model.py  d5037a3f7b99_create_task_model.py
neurons/validators/src/: cli.py  connector.py  job.py  test.py  test_validator.py  validator.py
neurons/validators/src/clients/: app_ws_client.py  compute_client.py  metagraph_client.py  miner_client.py  subtensor_client.py
neurons/validators/src/core/: config.py  db.py  utils.py  validator.py
neurons/validators/src/daos/: executor.py  task.py
neurons/validators/src/miner_jobs/: H100Verifier  H100Verifier.cu  Makefile  check_monitoring_script.py  machine_scrape.py  obfuscator.py  score.py
neurons/validators/src/models/: executor.py  task.py
neurons/validators/src/payload_models/: payloads.py
neurons/validators/src/protocol/vc_protocol/: compute_requests.py  validator_requests.py
neurons/validators/src/requests/: api_requests.py
neurons/validators/src/routes/: apis.py
neurons/validators/src/services/: collateral_contract_service.py  const.py  docker_service.py  file_encrypt_service.py  hash_service.py  interactive_shell_service.py  ioc.py  matrix_validation_service.py  miner_service.py  redis_service.py  ssh_service.py  task_service.py
scripts/: check_compatibility.sh  install_dev.sh  install_executor_on_ubuntu.sh  install_miner_dev.sh  install_miner_on_runpod.sh  install_miner_on_ubuntu.sh  install_staging.sh  install_validator_on_ubuntu.sh
tests/: test_template_validator.py
