[project]
name = "executor"
version = "0.1.0"
description = "Compute subnet executor"
authors = [
    {name = "waris", email = "waris0609@outlook.com"},
]
dependencies = [
    "bittensor>=6.9.3",
    "torch>=2.3.1",
    "fastapi>=0.99.1",
    "datura @ file:///${PROJECT_ROOT}/../../datura",
    "pydantic>=1.10.17",
    "pydantic-settings>=2.3.4",
    "ruff>=0.5.1",
    "websockets>=12.0",
    "numpy<2.0.0",
    "datasets>=2.20.0",
    "transformers>=4.43.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
