[project]
name = "executor"
version = "3.0.0"
description = "Compute subnet executor"
authors = [
    {name = "waris", email = "waris0609@outlook.com"},
]
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "async-property==0.2.2",
    "attrs==24.3.0",
    "backoff==2.2.1",
    "base58==2.1.1",
    "bittensor==8.5.0",
    "bittensor-cli==8.4.2",
    "bittensor-commit-reveal==0.1.0",
    "bittensor-wallet==2.1.3",
    "bt-decode==0.4.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "cytoolz==1.0.1",
    "datura @ file:///${PROJECT_ROOT}/../../datura",
    "decorator==5.1.1",
    "ecdsa==0.19.0",
    "eth-hash==0.7.0",
    "eth-keys==0.6.0",
    "eth-typing==5.0.1",
    "eth-utils==2.2.2",
    "fastapi==0.110.3",
    "frozenlist==1.5.0",
    "fuzzywuzzy==0.18.0",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "h11==0.14.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "Jinja2==3.1.4",
    "Levenshtein==0.26.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.5.0",
    "msgpack==1.1.0",
    "msgpack-numpy-opentensor==0.5.0",
    "multidict==6.1.0",
    "munch==2.5.0",
    "nest-asyncio==1.6.0",
    "netaddr==1.3.0",
    "numpy==2.0.2",
    "packaging==24.2",
    "password-strength==0.0.3.post2",
    "pluggy==1.5.0",
    "propcache==0.2.1",
    "py==1.11.0",
    "py-bip39-bindings==0.1.11",
    "py-ed25519-zebra-bindings==1.2.0",
    "py-sr25519-bindings==0.2.1",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pydantic_core==2.27.1",
    "Pygments==2.18.0",
    "PyNaCl==1.5.0",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "python-Levenshtein==0.26.1",
    "python-statemachine==2.5.0",
    "PyYAML==6.0.2",
    "RapidFuzz==3.10.1",
    "requests==2.32.3",
    "retry==0.9.2",
    "rich==13.9.4",
    "scalecodec==1.2.11",
    "setuptools==70.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "substrate-interface==1.7.11",
    "termcolor==2.5.0",
    "toml==0.10.0",
    "toolz==1.0.0",
    "typer==0.15.1",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.34.0",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "wheel==0.45.1",
    "xxhash==3.5.0",
    "yarl==1.18.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
