[project]
name = "miners"
version = "0.1.0"
description = "Compute subnet miner"
authors = [
    {name = "waris", email = "waris0609@outlook.com"},
]
dependencies = [
    "bittensor>=6.9.3",
    "torch>=2.3.1",
    "fastapi>=0.99.1",
    "datura @ file:///${PROJECT_ROOT}/../../datura",
    "pydantic>=1.10.17",
    "pydantic-settings>=2.3.4",
    "ruff>=0.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

format = [
    "ruff",
]
lint = [
    "ruff",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]