[project]
name = "validators"
version = "0.1.0"
description = "Compute Subnet validator"
authors = [
    {name = "waris", email = "waris0609@outlook.com"},
]
dependencies = [
    "bittensor>=6.9.3",
    "torch>=2.3.1",
    "fastapi>=0.99.1",
    "datura @ file:///${PROJECT_ROOT}/../../datura",
    "pydantic>=1.10.17",
    "pydantic-settings>=2.3.4",
    "ruff>=0.5.1",
    "websockets>=12.0",
    "alembic>=1.13.2",
    "databases[postgresql]>=0.9.0",
    "sqlmodel>=0.0.19",
    "psycopg2-binary~=2.9.7",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
