[project]
name = "validators"
version = "3.0.0"
description = "Compute Subnet validator"
authors = [
    {name = "waris", email = "waris0609@outlook.com"},
]
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.10.11",
    "aiosignal==1.3.2",
    "alembic==1.14.0",
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asgiref==3.8.1",
    "async-property==0.2.2",
    "async-substrate-interface==1.0.0",
    "asyncpg==0.30.0",
    "asyncssh==2.19.0",
    "asyncstdlib==3.13.0",
    "attrs==25.1.0",
    "backoff==2.2.1",
    "base58==2.1.1",
    "bittensor==9.0.0",
    "bittensor-cli==9.0.0",
    "bittensor-commit-reveal==0.2.0",
    "bittensor-wallet==3.0.3",
    "bt-decode==0.5.0a2",
    "celium-collateral==1.1.4",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "cytoolz==1.0.1",
    "databases==0.9.0",
    "datura @ file:///${PROJECT_ROOT}/../../datura",
    "decorator==5.1.1",
    "eth-hash==0.7.1",
    "eth-typing==5.1.0",
    "eth-utils==2.2.2",
    "fastapi==0.110.3",
    "frozenlist==1.5.0",
    "fuzzywuzzy==0.18.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "Jinja2==3.1.5",
    "Levenshtein==0.26.1",
    "Mako==1.3.9",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "msgpack==1.1.0",
    "msgpack-numpy-opentensor==0.5.0",
    "multidict==6.1.0",
    "munch==2.5.0",
    "narwhals==1.26.0",
    "nest-asyncio==1.6.0",
    "netaddr==1.3.0",
    "Nuitka==2.6.1",
    "numpy==2.0.2",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "password-strength==0.0.3.post2",
    "pexpect==4.9.0",
    "plotille==5.0.0",
    "plotly==6.0.0",
    "pluggy==1.5.0",
    "propcache==0.2.1",
    "psutil==6.1.1",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "py==1.11.0",
    "py-bip39-bindings==0.1.11",
    "pyarmor==9.0.6",
    "pyarmor.cli.core==7.6.3",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2025.1",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "python-json-logger==3.2.1",
    "python-Levenshtein==0.26.1",
    "python-statemachine==2.5.0",
    "pywry==0.6.2",
    "PyYAML==6.0.2",
    "RapidFuzz==3.12.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "retry==0.9.2",
    "rich==13.9.4",
    "scalecodec==1.2.11",
    "setproctitle==1.3.4",
    "setuptools==70.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.36",
    "sqlmodel==0.0.22",
    "starlette==0.37.2",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "toml==0.10.0",
    "toolz==1.0.0",
    "typer==0.15.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "websockets==14.2",
    "wheel==0.45.1",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
